# telegram_bot_01

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEST  alembic.ini  bot.py  config.py  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  states.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20251220_0054_9ac0f9a28488_initial_schema.py  20251220_2327_23c0f8efdece_add_balances_table_and_refactor_chats.py  20260113_1121_42f73f548644_add_is_general_field.py  20260127_1411_ad2df988368a_create_rate_table.py
database/: connection.py  queries.py
database/repositories/: __init__.py  balance_repo.py  base.py  chat_repo.py  operation_repo.py  rate_repo.py  user_repo.py
filters/: admin.py
handlers/: __init__.py  admin.py  balance_up.py  check.py  common.py  exchange.py  export.py  help.py  history.py  payments.py  reconciliation.py
middlewares/: chat_init_check.py  register_user.py  timeout_middleware.py
pythonbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: fill_bulk_data.py
tests/: conftest.py
tests/unit/: test_chat_repo.py
utils/: callbacks.py  daily_report.py  dateparse.py  excel.py  exchange_date_helper.py  helpers.py  keyboards.py
