[project]
name = "pythonbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.22.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "alembic==1.17.2",
    "annotated-types==0.7.0",
    "apscheduler>=3.11.2",
    "asyncpg==0.31.0",
    "attrs==25.4.0",
    "black==25.12.0",
    "certifi==2025.11.12",
    "click==8.3.1",
    "deprecated==1.3.1",
    "et-xmlfile==2.0.0",
    "faker==38.2.0",
    "flake8==7.3.0",
    "frozenlist==1.8.0",
    "idna==3.11",
    "isort==7.0.0",
    "lxml==6.0.2",
    "magic-filter==1.0.12",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "mccabe==0.7.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "numpy==2.3.5",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "pikepdf==10.0.2",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "propcache==0.4.1",
    "psycopg2-binary==2.9.11",
    "pycodestyle==2.14.0",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.12.0",
    "pyflakes==3.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytokens==0.3.0",
    "pytz==2025.2",
    "ruff==0.14.8",
    "six==1.17.0",
    "sqlalchemy==2.0.45",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "wrapt==2.0.1",
    "yarl==1.22.0",
]
